tweaks to resource bits. yay MVPs

--- a/march-update/squarespace-in-a-box/index.html
+++ b/march-update/squarespace-in-a-box/index.html
@@ -271,53 +271,53 @@
             </section>
             <section class="convertkit">
                 <script src="https://assets.convertkit.com/assets/CKJS4.js?v=21"></script>
-                    <div class="ck_form_container ck_inline" data-ck-version="6">
-                      <div class="ck_form ck_minimal">
-                      <div class="ck_form_fields">
-                        <h3 class="ck_form_title">Let&#x27;s talk......making your freelance plan!</h3>
-                        <div class="ck_description">
-                          <p>Sign up to be the first to know about new spots in your freelance consultation program.</p>
+                <div class="ck_form_container ck_inline" data-ck-version="6">
+                  <div class="ck_form ck_minimal">
+                  <div class="ck_form_fields">
+                    <h3 class="ck_form_title">Let&#x27;s talk about building your website!</h3>
+                    <div class="ck_description">
+                      <p>Sign up to be the first to know about new spots available for Squarespace in a Box.</p>
+                    </div>
+
+                    <div id="ck_success_msg"  style="display:none;">
+                      <p>Success! Now check your email to confirm your subscription.</p>
+                    </div>
+
+                    <!--  Form starts here  -->
+                    <form id="ck_subscribe_form" class="ck_subscribe_form" action="https://app.convertkit.com/landing_pages/184372/subscribe" data-remote="true">
+                      <input type="hidden" value="{&quot;form_style&quot;:&quot;minimal&quot;,&quot;embed_style&quot;:&quot;inline&quot;,&quot;embed_trigger&quot;:&quot;scroll_percentage&quot;,&quot;scroll_percentage&quot;:&quot;70&quot;,&quot;delay_seconds&quot;:&quot;10&quot;,&quot;display_position&quot;:&quot;br&quot;,&quot;display_devices&quot;:&quot;all&quot;,&quot;days_no_show&quot;:&quot;15&quot;,&quot;converted_behavior&quot;:&quot;show&quot;}" id="ck_form_options">
+                      <input type="hidden" name="id" value="184372" id="landing_page_id">
+                      <div class="ck_errorArea">
+                        <div id="ck_error_msg" style="display:none">
+                          <p>There was an error submitting your subscription. Please try again.</p>
                         </div>
-
-                        <div id="ck_success_msg"  style="display:none;">
-                          <p>Success! Now check your email to confirm your subscription.</p>
-                        </div>
-
-                        <!--  Form starts here  -->
-                        <form id="ck_subscribe_form" class="ck_subscribe_form" action="https://app.convertkit.com/landing_pages/184337/subscribe" data-remote="true">
-                          <input type="hidden" value="{&quot;form_style&quot;:&quot;minimal&quot;,&quot;embed_style&quot;:&quot;inline&quot;,&quot;embed_trigger&quot;:&quot;scroll_percentage&quot;,&quot;scroll_percentage&quot;:&quot;70&quot;,&quot;delay_seconds&quot;:&quot;10&quot;,&quot;display_position&quot;:&quot;br&quot;,&quot;display_devices&quot;:&quot;all&quot;,&quot;days_no_show&quot;:&quot;15&quot;,&quot;converted_behavior&quot;:&quot;show&quot;}" id="ck_form_options">
-                          <input type="hidden" name="id" value="184337" id="landing_page_id">
-                          <div class="ck_errorArea">
-                            <div id="ck_error_msg" style="display:none">
-                              <p>There was an error submitting your subscription. Please try again.</p>
-                            </div>
-                          </div>
-                          <div class="ck_control_group ck_email_field_group">
-                            <label class="ck_label" for="ck_emailField" style="display: none">email address</label>
-                            <input type="email" name="email" class="ck_email_address" id="ck_emailField" placeholder="email address" required>
-                          </div>
-                          <div class="ck_control_group ck_captcha2_h_field_group ck-captcha2-h" style="position: absolute !important;left: -999em !important;">
-                            <input type="text" name="captcha2_h" class="ck-captcha2-h" id="ck_captcha2_h" placeholder="We use this field to detect spam bots. If you fill this in, you will be marked as a spammer.">
-                          </div>
-
-                            <label class="ck_checkbox" style="display:none;">
-                              <input class="optIn ck_course_opted" name="course_opted" type="checkbox" id="optIn" checked />
-                              <span class="ck_opt_in_prompt">I'd like to receive the free email course.</span>
-                            </label>
-
-                          <button class="subscribe_button ck_subscribe_button btn fields" id="ck_subscribe_button">
-                            Make your plan
-                          </button>
-                          <span class="ck_guarantee">
-                            
-                              <a class="ck_powered_by" href="http://mbsy.co/convertkit/27884093">Powered by ConvertKit</a>
-                          </span>
-                        </form>
+                      </div>
+                      <div class="ck_control_group ck_email_field_group">
+                        <label class="ck_label" for="ck_emailField" style="display: none">email address</label>
+                        <input type="email" name="email" class="ck_email_address" id="ck_emailField" placeholder="email address" required>
+                      </div>
+                      <div class="ck_control_group ck_captcha2_h_field_group ck-captcha2-h" style="position: absolute !important;left: -999em !important;">
+                        <input type="text" name="captcha2_h" class="ck-captcha2-h" id="ck_captcha2_h" placeholder="We use this field to detect spam bots. If you fill this in, you will be marked as a spammer.">
                       </div>
 
-                    </div>
+                        <label class="ck_checkbox" style="display:none;">
+                          <input class="optIn ck_course_opted" name="course_opted" type="checkbox" id="optIn" checked />
+                          <span class="ck_opt_in_prompt">I'd like to receive the free email course.</span>
+                        </label>
 
-                    </div>
+                      <button class="subscribe_button ck_subscribe_button btn fields" id="ck_subscribe_button">
+                        Get on the list
+                      </button>
+                      <span class="ck_guarantee">
+                        
+                          <a class="ck_powered_by" href="http://mbsy.co/convertkit/27884093">Powered by ConvertKit</a>
+                      </span>
+                    </form>
+                  </div>
+
+                </div>
+
+                </div>
             </section>
         </div> <!-- wrapper -->
 
