added links to blog

--- a/march-update/index.html
+++ b/march-update/index.html
@@ -85,16 +85,16 @@
                         </li>
                         <li class ="spacer"></li>
                         <li>
+                            <a href="blog/">
+                                Blog
+                            </a>
+                        </li>
+                        <li class ="spacer"></li>
+                        <li>
                             <a href="contact/">
                                 Contact
                             </a>
                         </li>
-                        <!-- <li class ="spacer"></li>
-                        <li>
-                            <a href="/blog">
-                                Archives
-                            </a>
-                        </li> -->
                     </ul>
                 </div>
             </section>
@@ -212,7 +212,7 @@
                                             You're a freelancer now! You're building a client base and now you're ready to turn strangers into clients with your website. You want to work with someone to figure what to put on your website, get it up and running in 30 days, and be able to manage it on your own.
                                         </p>
                                         <button>
-                                            <a href="squarespace-in-a-box/">Want to hear more?</a>
+                                            <a href="squarespace-in-a-box/">Ready to create your site?</a>
                                         </button>
                                     </div>
                                 </div>
