--- a/march-update/work-with-me/index.html
+++ b/march-update/work-with-me/index.html
@@ -44,42 +44,42 @@
                 <section id="menu-main" class="uppercase">
                     <div class="menu-wrapper">
                         <ul class="menu-active">
-                            <li>
-                                <a href="../">
-                                    Home                                
-                                </a>
-                            </li>
-                            <li class ="spacer"></li>
-                            <li>
-                                <a href="../about/">
-                                    About Me
-                                </a>
-                            </li>
-                            <li class ="spacer"></li>
-                            <li>
-                                <a href="#">
-                                    Work with Me
-                                </a>
-                            </li>
-                            <li class ="spacer"></li>
-                            <li>
-                                <a href="../portfolio">
-                                    Portfolio
-                                </a>
-                            </li>
-                            <li class ="spacer"></li>
-                            <li>
-                                <a href="../contact/">
-                                    Contact
-                                </a>
-                            </li>
-                            <!-- <li class ="spacer"></li>
-                            <li>
-                                <a href="../blog">
-                                    Archives
-                                </a>
-                            </li> -->
-                        </ul>
+                        <li>
+                            <a href="#">
+                                Home                                
+                            </a>
+                        </li>
+                        <li class ="spacer"></li>
+                        <li>
+                            <a href="about/">
+                                About Me
+                            </a>
+                        </li>
+                        <li class ="spacer"></li>
+                        <li>
+                            <a href="work-with-me/">
+                                Work with Me
+                            </a>
+                        </li>
+                        <li class ="spacer"></li>
+                        <li>
+                            <a href="portfolio/">
+                                Portfolio
+                            </a>
+                        </li>
+                        <li class ="spacer"></li>
+                        <li>
+                            <a href="blog/">
+                                Blog
+                            </a>
+                        </li>
+                        <li class ="spacer"></li>
+                        <li>
+                            <a href="contact/">
+                                Contact
+                            </a>
+                        </li>
+                    </ul>
                     </div>
                 </section>
                 <div class="menu-hide">
