--- a/march-update/contact/index.html
+++ b/march-update/contact/index.html
@@ -39,41 +39,41 @@
                     <div class="menu-wrapper">
                         <ul class="menu-active">
                             <li>
-                                <a href="../">
+                                <a href="#">
                                     Home                                
                                 </a>
                             </li>
                             <li class ="spacer"></li>
                             <li>
-                                <a href="../about/">
+                                <a href="about/">
                                     About Me
                                 </a>
                             </li>
                             <li class ="spacer"></li>
                             <li>
-                                <a href="#">
+                                <a href="work-with-me/">
                                     Work with Me
                                 </a>
                             </li>
                             <li class ="spacer"></li>
                             <li>
-                                <a href="../portfolio">
+                                <a href="portfolio/">
                                     Portfolio
                                 </a>
                             </li>
                             <li class ="spacer"></li>
                             <li>
-                                <a href="#">
+                                <a href="blog/">
+                                    Blog
+                                </a>
+                            </li>
+                            <li class ="spacer"></li>
+                            <li>
+                                <a href="contact/">
                                     Contact
                                 </a>
                             </li>
-                            <!-- <li class ="spacer"></li>
-                            <li>
-                                <a href="../blog">
-                                    Archives
-                                </a>
-                            </li> -->
-                        </ul>
+                    </ul>
                     </div>
                 </section>
                 <div class="menu-hide">
