add hidden pinterest photos to freelance page

--- a/march-update/freelance-plan/index.html
+++ b/march-update/freelance-plan/index.html
@@ -4,7 +4,7 @@
 
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Aleia Walker</title>
+        <title>Aleia Walker - Freelance Plan</title>
         <meta name="description" content="Aleia Walker is a frontend web developer and designer based in Atlanta who wants to design and build your website.">
         <meta name="keywords" content="aleia walker, aleia, freelance writer, writing, web design, web designer, web development, customer support, atlanta, caribbean" >
         <meta name="author" content="Aleia Walker" >
@@ -402,7 +402,10 @@
             </section>
             <section class="interest-list-description">
                 <div class="il-header-description">
-                    <div class="familiar">
+                  <!--   <figure class="familiar-photo">
+                        <img src="../img/aleia-excited.png">
+                    </figure> -->
+                    <div class="familiar familair-left">
                         <h2>A little about Aleia</h2>
                         <p>
                             Hi, i'm <span>Aleia Walker</span> a Freelance <span>Web Designer/Developer</span> and Web Development Instructor.
@@ -474,6 +477,10 @@
 
                     </div>
             </section>
+            <div class="social-media-photos">
+                <img src="https://www.aleiawalker.com/img/freelance-plan.jpg" alt="freelance plan pinterest photo">
+                <img src="https://www.aleiawalker.com/img/freelance-wide.jpg" alt="freelance plan twitter facebook photo">
+            </div>
         </div> <!-- wrapper -->
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
