--- a/march-update/freelance-plan/index.html
+++ b/march-update/freelance-plan/index.html
@@ -24,211 +24,6 @@
         <link rel="stylesheet" href="../css/font-awesome.css">
         <link rel="stylesheet" href="../css/font-awesome.min.css">
         <script src="../js/vendor/modernizr-2.8.3.min.js"></script>
-
-        <style type="text/css">/* Layout */
-          .ck_form.ck_minimal {
-          /* divider image */
-            background: #f9f9f9;
-            font-family: 'Helvetica Neue', Helvetica, Arial, Verdana, sans-serif;
-            line-height: 1.5em;
-            overflow: hidden;
-            color: #666;
-            font-size: 16px;
-            border: solid 1px #d1d1d1;
-            -webkit-box-shadow: none;
-            -moz-box-shadow: none;
-            box-shadow: none;
-            clear: both;
-            margin: 20px 0px;
-            text-align: center;
-        }
-
-
-        .ck_form.ck_minimal h3.ck_form_title {
-            text-align: center;
-            margin: 0px 0px 10px;
-            font-size: 28px;
-        }
-
-        .ck_form.ck_minimal h4 {
-            text-align: center;
-            font-family: 'Open Sans', Helvetica, Arial, sans-serif;
-            text-transform: uppercase;
-            font-size: 18px;
-            font-weight: normal;
-            padding-top: 0px;
-            margin-top: 0px;
-        }
-
-        .ck_form.ck_minimal p {
-            padding: 0px;
-        }
-
-        .ck_form, .ck_form * {
-            -webkit-box-sizing: border-box;
-            -moz-box-sizing: border-box;
-            box-sizing: border-box;
-        }
-
-        .ck_form.ck_minimal .ck_form_fields {
-            width: 100%;
-            float: left;
-            padding: 5%;
-        }
-        /* Form fields */
-
-        .ck_errorArea {
-            display: none; /* temporary */
-        }
-
-        #ck_success_msg {
-            padding: 10px 10px 0px;
-            border: solid 1px #ddd;
-            background: #eee;
-        }
-
-        .ck_form.ck_minimal input[type="text"], .ck_form.ck_minimal input[type="email"] {
-            font-size: 18px;
-            padding: 10px 8px;
-            width: 68%;
-            border: 1px solid #d6d6d6; /* stroke */
-            -moz-border-radius: 3px;
-            -webkit-border-radius: 3px;
-            border-radius: 3px; /* border radius */
-            background-color: #fff; /* layer fill content */
-            margin-bottom: 5px;
-            height: auto;
-            float: left;
-            margin: 0px;
-            margin-right: 2%;
-            height: 42px;
-        }
-
-        .ck_form input[type="text"]:focus, .ck_form input[type="email"]:focus {
-            outline: none;
-            border-color: #aaa;
-        }
-
-        .ck_form.ck_minimal .ck_subscribe_button {
-            width: 100%;
-            color: #fff;
-            margin: 0px;
-            padding:  11px 0px;
-            font-size: 18px;
-            background: #0d6db8;
-            -moz-border-radius: 3px;
-            -webkit-border-radius: 3px;
-            border-radius: 3px; /* border radius */
-            cursor: pointer;
-            border: none;
-            text-shadow: none;
-            width: 30%;
-            float: left;
-            height: 42px;
-          }
-
-
-        .ck_form.ck_minimal .ck_guarantee {
-            color: #626262;
-            font-size: 12px;
-            text-align: center;
-            padding: 15px 0px 0px;
-            display: block;
-            clear: both;
-        }
-        .ck_form .ck_powered_by {
-            display: block;
-            color: #aaa;
-            font-size: 12px;
-        }
-
-        .ck_form .ck_powered_by:hover {
-            display: block;
-            color: #444;
-        }
-
-        .ck_converted_content {
-          display: none;
-            padding: 5%;
-            background: #fff;
-        }
-
-        .ck_form.ck_minimal.width400 .ck_subscribe_button, .ck_form.ck_minimal.width400 input[type="email"] {
-                width: 100%;
-                float: none;
-                margin-top: 5px;
-            }
-
-        .ck_slide_up, .ck_modal, .ck_slide_up .ck_minimal, .ck_modal .ck_minimal  {
-            min-width: 400px;
-        }
-
-        .page .ck_form.ck_minimal {
-            margin: 50px auto;
-            max-width: 600px;
-        }
-
-
-        /* v6 */
-        .ck_slide_up.ck_form_v6, .ck_modal.ck_form_v6, .ck_slide_up.ck_form_v6 .ck_minimal, .ck_modal.ck_form_v6 .ck_minimal {
-          min-width: 0 !important;
-        }
-
-        @media all and (min-width: 801px) {
-          .ck_modal.ck_form_v6 .ck_form.ck_minimal {
-            margin-left: -300px;
-            width: 600px;
-          }
-        }
-
-        .ck_modal.ck_form_v6 .ck_minimal .ck_subscribe_form {
-          padding-top: 20px;
-        }
-
-        .ck_slide_up.ck_form_v6 .ck_minimal .ck_subscribe_form {
-          padding-top: 10px;
-        }
-
-        .ck_form_v6 #ck_success_msg {
-          margin-top: 15px;
-          padding: 0px 10px;
-        }
-
-        .ck_slide_up.ck_form_v6 .ck_minimal + .ck_close_link {
-          top: 5px;
-        }
-        .ck_slide_up.ck_form_v6 .ck_minimal h3.ck_form_title {
-          margin-top: 5px;
-        }
-
-
-
-        @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,700');
-
-        .page{
-        font-family: 'Montserrat';
-        }
-
-        .ck_description{
-        font-family: "Montserrat";
-        font-weight: 300;
-        }
-
-        .ck_form_title{
-        font-weight: 700;
-        }
-
-        #ck_subscribe_button{
-        background-color: #E71D36;
-        font-family: "Montserrat";
-        font-weight: 700;
-        }
-
-        .ck_form.ck_minimal input[type="text"], .ck_form.ck_minimal input[type="email"]{
-        font-family: "Montserrat";
-        }
-
-    </style>
     </head>
     <body class="interest-list">
         <!--[if lt IE 8]>
@@ -310,7 +105,7 @@
                                 </div>
                             </div>
 
-                            <div class="module-item">
+                            <div class="module-item" id="module-right">
                                 <div class="number">
                                     <p>2</p>
                                 </div>
@@ -333,7 +128,7 @@
                                 </div>
                             </div>
 
-                            <div class="module-item">
+                            <div class="module-item" id="module-right">
                                 <div class="number">
                                     <p>4</p>
                                 </div>
@@ -405,8 +200,8 @@
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+        <script src="../js/plugins.js"></script>
+        <script src="../js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
@@ -419,13 +214,6 @@
         </script>
 
         <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
-        <script>
-        $(document).ready(function() {
-            $('#toggle-nav').click(function() {
-                $('#menu-main').slideToggle("slow");
-                $('.menu-hide').slideDown();
-            });
-        });                
-        </script>
+        
     </body>
 </html>
