updated sales page

--- a/march-update/freelance-plan/index.html
+++ b/march-update/freelance-plan/index.html
@@ -181,7 +181,10 @@
                             It wasn't an easy journey and I did not have limitless funds or time - so I made sure <span>I could learn and apply a lot in a little time, with little money</span>.
                         </p>
                         <p>
-                        Six months after starting to learn new skills, <span>I started freelancing</span>. And a year later, <span>I quit my full-time job</span>. And I feel like <span>I provide value to someone every damn day</span>.
+                            Six months after starting to learn new skills, <span>I started freelancing</span>. And a year later, <span>I quit my full-time job</span>. And I feel like <span>I provide value to someone every damn day</span>.
+                        </p>
+                        <p>
+                            <span>Are you next?</span>
                         </p>
                     </div>
                 </div>
