--- a/march-update/squarespace-in-a-box/index.html
+++ b/march-update/squarespace-in-a-box/index.html
@@ -64,6 +64,36 @@
 
                 </div>
             </section>
+            <section class="interest-list-description" id="wip-block-siab">
+                <div class="il-header-description" id="aleia-bio-sales-pages">
+                    <figure class="familiar-photo">
+                        <img src="../img/aleia-excited.png">
+                    </figure>
+                    <div class="familiar familiar-left">
+                        <h2>A little about Aleia</h2>
+                        <p>
+                            Hi, i'm <span>Aleia Walker</span> a Freelance <span>Web Designer/Developer</span> and Web Development Instructor.
+                        </p>
+                        <p>
+                            Three years ago I was an <span>unhappy corporate drone</span>. I did not feel valued at work and no one missed when I was gone.</p>
+                        <p>
+                            I knew that something needed to change, so I <span>started looking for skills that would make me more attractive</span> - skills that would let me quit my full-time job and work on my own terms.
+                        </p>
+                        <p>
+                            I <span>tested out a few side hustles</span>. Calligraphy, woodworking, business writing, and social media strategy to name a few untilsettling on web development and design - it's now one of my greatest passions!
+                        </p> 
+                        <p>
+                            It wasn't an easy journey and I did not have limitless funds or time - so I made sure <span>I could learn and apply a lot in a little time, with little money</span>.
+                        </p>
+                        <p>
+                            Six months after starting to learn new skills, <span>I started freelancing</span>. And a year later, <span>I quit my full-time job</span>. And I feel like <span>I provide value to someone every damn day</span>.
+                        </p>
+                        <p>
+                            <span>Are you next?</span>
+                        </p>
+                    </div>
+                </div>
+            </section>
             <section class="convertkit">
                 <script async id="_ck_184372" src="https://forms.convertkit.com/184372?v=6"></script>
                 <aside>
