updated sales page + meta data

--- a/march-update/index.html
+++ b/march-update/index.html
@@ -4,10 +4,9 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Aleia Walker</title>
-        <meta name="description" content="Aleia Walker is a frontend web developer and designer based in Atlanta who wants to design and build your website.">
-        <meta name="keywords" content="aleia walker, aleia, freelance writer, writing, web design, web designer, web development, customer support, atlanta, caribbean" >
-        <meta name="author" content="Aleia Walker" >
-        <meta name="twitter:description" content="Aleia Walker is a frontend web developer and designer based in Atlanta. Working everyday to be awesome. And humble.">
+        <meta name="description" content="Aleia Walker is a resource library for freelancers and side hustlers looking to take their side hustles full-time.">
+        <meta name="keywords" content="aleia walker, aleia, freelance, freelancer, web design, web development,resources, freelance library, freelance plan, atlanta, remote" >
+        <meta name="author" content="Aleia Walker">
         <meta name="p:domain_verify" content="26747e1e564f614a66efbbd3db924195"/> <!-- pinterest -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
