--- a/march-update/squarespace-in-a-box/index.html
+++ b/march-update/squarespace-in-a-box/index.html
@@ -4,11 +4,10 @@
 
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Aleia Walker</title>
-        <meta name="description" content="Aleia Walker is a frontend web developer and designer based in Atlanta who wants to design and build your website.">
-        <meta name="keywords" content="aleia walker, aleia, freelance writer, writing, web design, web designer, web development, customer support, atlanta, caribbean" >
+        <title>Aleia Walker | Squarespace in a Box</title>
+        <meta name="description" content="Aleia Walker is a resource library for freelancers and side hustlers looking to take their side hustles full-time.">
+        <meta name="keywords" content="aleia walker, aleia, freelance, freelancer, web design, web development,resources, freelance library, freelance plan, atlanta, remote" >
         <meta name="author" content="Aleia Walker" >
-        <meta name="twitter:description" content="Aleia Walker is a frontend web developer and designer based in Atlanta. Working everyday to be awesome. And humble.">
     
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
