updated sales page

--- a/march-update/freelance-plan/index.html
+++ b/march-update/freelance-plan/index.html
@@ -71,7 +71,6 @@
                     You want to work with someone who's been there before and made the transition to full-time freelancer using trusted free and inexpensive resources.
                 </p>
             </section>
-
             <section class="fp-dark gumroad">
                 <div>
                     <h2>Ready to get started?</h2>
@@ -166,6 +165,39 @@
                             </div>
                         </article>
                     </div>
+                </div>
+            </section>
+
+            <section class="whats-included">
+                <div>
+                    <h2>What's included</h2>
+                    <aside>
+                        <div>
+                        <h3>Who is this for?</h3>
+                            <p>
+                                <i class="fa fa-check"></i> You're almost decided on choosing your side hustle but you need help making a plan to <span>quit your 9 to 5 job</span>.
+                            </p>
+                            <p>
+                                <i class="fa fa-check"></i> You want to work together someone who took their <span>side hustle full-time</span> to build your side hustle education, implementation, and marketing plan.
+                            </p>
+                            <p>
+                                <i class="fa fa-check"></i> You have a full-time job and a full-time life. But <span>you're tired of fitting your life around your job</span> and are ready to make a change.
+                            </p>
+                        </aside>
+
+                        <aside class="who-not">
+                            <h3>Who is this not for?</h3>
+                            <p>
+                                <i class="fa fa-times"></i> <span>You want all the resources</span> but you don't want to spend time implementing those resources to get results.
+                            </p>
+                            <p>
+                                <i class="fa fa-times"></i> You want to spend the rest of your life being told what to do at work, instead of <span>planning and implementing your dreams</span>.
+                            </p>
+                            <p>
+                                <i class="fa fa-times"></i> You <span>hate spending time with friends, family, and fur babies</span> and prefer to spend all of your time in a cubicle.
+                            </p>
+                        </aside>
+                        </div>
                 </div>
             </section>
             
