fixed the corruption from hell

--- a/march-update/freelance-plan/index.html
+++ b/march-update/freelance-plan/index.html
@@ -167,39 +167,6 @@
                     </div>
                 </div>
             </section>
-
-            <section class="whats-included">
-                <div>
-                    <h2>What's included</h2>
-                    <aside>
-                        <div>
-                        <h3>Who is this for?</h3>
-                            <p>
-                                <i class="fa fa-check"></i> You're almost decided on choosing your side hustle but you need help making a plan to <span>quit your 9 to 5 job</span>.
-                            </p>
-                            <p>
-                                <i class="fa fa-check"></i> You want to work together someone who took their <span>side hustle full-time</span> to build your side hustle education, implementation, and marketing plan.
-                            </p>
-                            <p>
-                                <i class="fa fa-check"></i> You have a full-time job and a full-time life. But <span>you're tired of fitting your life around your job</span> and are ready to make a change.
-                            </p>
-                        </aside>
-
-                        <aside class="who-not">
-                            <h3>Who is this not for?</h3>
-                            <p>
-                                <i class="fa fa-times"></i> <span>You want all the resources</span> but you don't want to spend time implementing those resources to get results.
-                            </p>
-                            <p>
-                                <i class="fa fa-times"></i> You want to spend the rest of your life being told what to do at work, instead of <span>planning and implementing your dreams</span>.
-                            </p>
-                            <p>
-                                <i class="fa fa-times"></i> You <span>hate spending time with friends, family, and fur babies</span> and prefer to spend all of your time in a cubicle.
-                            </p>
-                        </aside>
-                        </div>
-                </div>
-            </section>
             
             <section class="fp-dark">
                 <div class="fit-container">
@@ -233,13 +200,12 @@
                     </aside>
                 </div>
             </section>
-            <section class="interest-list-description">
+            <section class="interest-list-description" id="wip-block-r">
                 <div class="il-header-description" id="aleia-bio-sales-pages">
                     <figure class="familiar-photo">
-                        <img src="../img/aleia-excited.png" alt="aleia walker photo">
+                        <img src="../img/aleia-excited.png">
                     </figure>
-                    <div class="familiar famil
-                    iar-left">
+                    <div class="familiar familiar-left">
                         <h2>A little about Aleia</h2>
                         <p>
                             Hi, i'm <span>Aleia Walker</span> a Freelance <span>Web Designer/Developer</span> and Web Development Instructor.
@@ -309,7 +275,7 @@
             <section class="convertkit">
                 <script async id="_ck_184337" src="https://forms.convertkit.com/184337?v=6"></script>
                 <aside>
-                <p>Made with <i class="fa fa-coffee fa-lg"></i> (tea) by <a href="../">Aleia Walker</a></p>
+                <p>Made with <i class="fa fa-coffee fa-lg" alt="tea icon"></i> (tea) by <a href="../">Aleia Walker</a></p>
                 </aside>
             </section>
             <div class="social-media-photos">
