added ids to make it easy to link to sections

--- a/march-update/freelance-plan/index.html
+++ b/march-update/freelance-plan/index.html
@@ -71,7 +71,7 @@
                     You want to work with someone who's been there before and made the transition to full-time freelancer using trusted free and inexpensive resources.
                 </p>
             </section>
-            <section class="fp-dark gumroad">
+            <section class="fp-dark gumroad" id="buy-fp-now">
                 <div>
                     <h2>Ready to get started?</h2>
                     <p class="sell-date">
@@ -99,12 +99,12 @@
                 </div>
             </section>
 
-            <section class="interest-list-description">
+            <section class="interest-list-description" id="four-modules">
                 <div class="il-header-description">
                     <div class="familiar">
                         <h2>What is the Freelance Plan?</h2>
                         <p>
-                            It's a series of 1-on-1 <span>consultation calls</span> where we work through your freelance goals. You get <span>actionable resources</span> and implementation steps <span>and ccountability</span>.
+                            It's a series of 1-on-1 <span>consultation calls</span> where we work through your freelance goals. You get <span>actionable resources</span> and implementation steps <span>and accountability</span>.
                         </p>
                     </div>
                 </div>
