updated homepage to remove squarespace in a box and add link to blog

--- a/march-update/index.html
+++ b/march-update/index.html
@@ -192,10 +192,10 @@
                             </article>
                             <article class="offerings-item" id="hack-your-hustle">
                                 <div class="offerings-items-container">
-                                    <h3>...making your plan to take your side hustle to full-time plan.</h3>
+                                    <h3>...quitting your 9 to 5 without going back to school.</h3>
                                     <div class="offerings-item-wrapper">
                                         <p>
-                                            You're pretty sure that you know what you want your side hustle to be but you need help making a plan to quit your 9 to 5 job? You want to work together someone who took their side hustle full-time to build your side hustle education, implementation, and marketing plan.  
+                                            You don't have the time, energy, or money to start your career over by traditional means. You need a new career and don't want to spend forever getting there. You want to work together someone who took their side hustle full-time so they can show you the path to do the same for yourself - in less time.  
                                         </p>
                                         <button>
                                             <a href="freelance-plan/">Ready to make your plan?</a>
@@ -203,7 +203,20 @@
                                     </div>
                                 </div>
                             </article> 
-                            <article class="offerings-item" id="squarespace-in-a-box">
+                            <article class="offerings-item" id="the-blog">
+                                <div class="offerings-items-container">
+                                    <h3>...freelance tips.</h3>
+                                    <div class="offerings-item-wrapper">
+                                        <p>
+                                            You're not ready to jump head first into a mentorship package, a la the Freelance Plan but you do want a deeper understanding of all things freelance.
+                                        </p>
+                                        <button>
+                                            <a href="blog/">Read the blog.</a>
+                                        </button>
+                                    </div>
+                                </div>
+                            </article>
+                            <!-- <article class="offerings-item" id="squarespace-in-a-box">
                                 <div class="offerings-items-container">
                                     <h3>...what to put on your website.</h3>
                                     <div class="offerings-item-wrapper">
@@ -215,7 +228,7 @@
                                         </button>
                                     </div>
                                 </div>
-                            </article> 
+                            </article> --> 
                         </div> <!-- offerings container wrapper -->
                     </div>
                 </section>
