updated Aleia bio + removed convertkit opt-in

--- a/march-update/freelance-plan/index.html
+++ b/march-update/freelance-plan/index.html
@@ -208,15 +208,15 @@
                     <div class="familiar familiar-left">
                         <h2>A little about Aleia</h2>
                         <p>
-                            Hi, i'm <span>Aleia Walker</span> a Freelance <span>Web Designer/Developer</span> and Web Development Instructor.
+                            Hi, i'm <span>Aleia Walker</span> a Freelance <span>Web Developer</span>.
                         </p>
                         <p>
-                            Three years ago I was an <span>unhappy corporate drone</span>. I did not feel valued at work and no one missed when I was gone.</p>
+                            But three years ago I started a job as an <span>unhappy corporate drone</span>.</p>
                         <p>
-                            I knew that something needed to change, so I <span>started looking for skills that would make me more attractive</span> - skills that would let me quit my full-time job and work on my own terms.
+                            I immediately <span>knew that something needed to change</span>, so I started looking for skills that would let me quit my full-time job and work on my own terms.
                         </p>
                         <p>
-                            I <span>tested out a few side hustles</span>. Calligraphy, woodworking, business writing, and social media strategy to name a few untilsettling on web development and design - it's now one of my greatest passions!
+                            I <span>tested out a few side hustles</span>. Calligraphy, woodworking, business writing, and social media strategy to name a few until settling on web development and design - it's now one of my greatest passions!
                         </p> 
                         <p>
                             It wasn't an easy journey and I did not have limitless funds or time - so I made sure <span>I could learn and apply a lot in a little time, with little money</span>.
@@ -225,7 +225,7 @@
                             Six months after starting to learn new skills, <span>I started freelancing</span>. And a year later, <span>I quit my full-time job</span>. And I feel like <span>I provide value to someone every damn day</span>.
                         </p>
                         <p>
-                            <span>Are you next?</span>
+                            Three months after quitting my dayjob, <span>I doubled my income</span>. And I'll triple it by the one year mark.
                         </p>
                     </div>
                 </div>
@@ -273,7 +273,7 @@
                 </div>
             </section>
             <section class="convertkit">
-                <script async id="_ck_184337" src="https://forms.convertkit.com/184337?v=6"></script>
+<!--                 <script async id="_ck_184337" src="https://forms.convertkit.com/184337?v=6"></script> -->
                 <aside>
                 <p>Made with <i class="fa fa-coffee fa-lg" alt="tea icon"></i> (tea) by <a href="../">Aleia Walker</a></p>
                 </aside>
